se añade conexion entre menues

--- a/index.html
+++ b/index.html
@@ -12,65 +12,67 @@
     <title>Estacion de milanesas</title>
 </head>
 <body>
-    <header class="container">
+    <header class="container-fluid">
     <nav id="estilonav" class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#"> <img class="img-fluid" id="logonav" src="./assets/images/86948.jpg" alt="Logo estacion de milanesas"></a>
+            <a class="navbar-brand" href="./index.html"> <img class="img-fluid" id="logonav" src="./assets/images/86948.jpg" alt="Logo estacion de milanesas"></a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                 <li class="nav-item">
-                    <a class="nav-link active estilofuente navfont hover-effect" aria-current="page" href="#">ESTACION DE MILANESAS</a>
+                    <a class="nav-link active estilofuente navfont hover-effect" aria-current="page" href="./index.html">ESTACION DE MILANESAS</a>
                   </li>
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle estilofuente mx-3 navfont hover-effect" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                       Productos
                     </a>
                     <ul class="dropdown-menu estilofuente">
-                      <li><a class="dropdown-item navfont hover-effect" href="#">Milanesas</a></li>
-                      <li><a class="dropdown-item navfont hover-effect" href="#">Hamburguesas</a></li>
-                      <li><a class="dropdown-item navfont hover-effect" href="#">Estacion box</a></li>
-                      <li><a class="dropdown-item navfont hover-effect" href="#">Sandwichs</a></li>
+                      <li><a class="dropdown-item navfont hover-effect" href="./pages/productos.html">Milanesas</a></li>
+                      <li><a class="dropdown-item navfont hover-effect" href="./pages/productos.html">Hamburguesas</a></li>
+                      <li><a class="dropdown-item navfont hover-effect" href="./pages/productos.html">Estacion box</a></li>
+                      <li><a class="dropdown-item navfont hover-effect" href="./pages/productos.html">Sandwichs</a></li>
                       <li><hr class="dropdown-divider"></li>
-                      <li><a class="dropdown-item navfont hover-effect" href="#">Bebidas</a></li>
+                      <li><a class="dropdown-item navfont hover-effect" href="./pages/productos.html">Bebidas</a></li>
                     </ul>
                   </li>
                 <li class="nav-item mx-3">
-                <a class="nav-link active estilofuente navfont hover-effect" aria-current="page" href="#">Locales</a>
+                <a class="nav-link active estilofuente navfont hover-effect" href="./pages/locales.html">Locales</a>
               </li>
               <li class="nav-item mx-3">
-                <a class="nav-link estilofuente navfont hover-effect" href="#">Promociones</a>
+                <a class="nav-link estilofuente navfont hover-effect" href="./pages/promociones.html">Promociones</a>
               </li>
               <li class="nav-item mx-3">
-                <a class="nav-link estilofuente navfont hover-effect" href="#">Franquicias</a>
+                <a class="nav-link estilofuente navfont hover-effect" href="./pages/franquicias.html">Franquicias</a>
               </li>
             </ul>
           </div>
         </div>
         <div class="mx-5">
-            <button class="botonpeya">Pedidosya</button>
+          <a href="https://www.pedidosya.com.ar/cadenas/estacion-de-milanesas?sem_tracker=10153970374&pycat=googlesearch&cmp=&ag=&kwd=f%3Aaggregator_serp%3Afeature_id_fprint%3D16707354091139426751&mt=&net=g&dev=c&sitelink=" target="_blank">
+            <button class="botonpeya"></button>
+          </a>
         </div>
       </nav>
 </header>
-<main class="container">
+<main class="container-fluid">
   <section class="contenedor">
     <img class="img-main img-fluid" src="./assets/images/1.jpg" alt="imagen milanesa">
     <p class="mensajemila fuentemila">WE LOVE MILA &#x2764</p>
   </section>
-  <section class="container">
+  <section class="container-fluid">
     <div class="text-center mt-5 mb-5">
       <h2 class="conocenosfont">DESCUBRI</h2>
     </div>
   </section>
-<section class="container row">
+<section class="container-fluid row">
   <div class="card col-4 container" style="width: 18rem;">
     <img src="..." class="card-img-top" alt="...">
     <div class="card-body">
-      <h5 class="card-title">MENU</h5>
+      <h5 class="card-title">PRODUCTOS</h5>
       <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-      <a href="#" class="btn btn-primary">Go somewhere</a>
+      <a href="./pages/productos.html" class="btn btn-primary">Go somewhere</a>
     </div>
   </div>
   <div class="card col-4 container" style="width: 18rem;">
@@ -78,7 +80,7 @@
     <div class="card-body">
       <h5 class="card-title">LOCALES</h5>
       <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-      <a href="#" class="btn btn-primary">Go somewhere</a>
+      <a href="./pages/locales.html" class="btn btn-primary">Go somewhere</a>
     </div>
   </div>
   <div class="card col-4 container" style="width: 18rem;">
@@ -86,7 +88,7 @@
     <div class="card-body">
       <h5 class="card-title">PROMOCIONES</h5>
       <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-      <a href="#" class="btn btn-primary">Go somewhere</a>
+      <a href="./pages/promociones.html" class="btn btn-primary">Go somewhere</a>
     </div>
   </div>
 </section>
