Se añaden cards

--- a/index.html
+++ b/index.html
@@ -63,33 +63,44 @@
   </section>
   <section class="container-fluid">
     <div class="text-center mt-5 mb-5">
-      <h2 class="conocenosfont">DESCUBRI</h2>
+      <p class="conocenosfont">DESCUBRI</p>
     </div>
   </section>
 <section class="container-fluid row">
-  <div class="card col-4 container" style="width: 18rem;">
-    <img src="..." class="card-img-top" alt="...">
-    <div class="card-body">
-      <h5 class="card-title">PRODUCTOS</h5>
-      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-      <a href="./pages/productos.html" class="btn btn-primary">Go somewhere</a>
+  <div class="card col-4 container" style="width: 27rem;">
+    <img src="./assets/images/productos.jpg" class="card-img-top" alt="imagen productos">
+    <div class="card-body row">
+      <h5 class="card-title descubrifont text-center">PRODUCTOS</h5>
+      <p class="card-text navfont text-center">Amamos la comida, por eso te acercamos la mejor calidad, para que disfrutes con familia, amigos o quien mas quieras.</p>
+      <a href="./pages/productos.html" class="btn btn-primary colorbtncard">Conocelos</a>
     </div>
   </div>
-  <div class="card col-4 container" style="width: 18rem;">
-    <img src="..." class="card-img-top" alt="...">
-    <div class="card-body">
-      <h5 class="card-title">LOCALES</h5>
-      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-      <a href="./pages/locales.html" class="btn btn-primary">Go somewhere</a>
+  <div class="card col-4 container" style="width: 27rem;">
+    <img src="./assets/images/locales.jpg" class="card-img-top" alt="imagen locales">
+    <div class="card-body row container-fluid">
+      <h5 class="card-title descubrifont text-center">LOCALES</h5>
+      <p class="card-text navfont text-center">Siempre cerca tuyo, conoce todos los lugares donde podes visitarnos.</p>
+      <a href="./pages/locales.html" class="btn btn-primary colorbtncard">Sucursales</a>
     </div>
   </div>
-  <div class="card col-4 container" style="width: 18rem;">
-    <img src="..." class="card-img-top" alt="...">
-    <div class="card-body">
-      <h5 class="card-title">PROMOCIONES</h5>
-      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-      <a href="./pages/promociones.html" class="btn btn-primary">Go somewhere</a>
+  <div class="card col-4 container" style="width: 27rem;">
+    <img src="./assets/images/promociones.jpg" class="card-img-top" alt="imagen promociones">
+    <div class="card-body row">
+      <h5 class="card-title descubrifont text-center">PROMOCIONES</h5>
+      <p class="card-text navfont text-center">Queremos que nos vengas a visitar, por eso te acercamos siempre las mejores promos, conocelas.</p>
+      <a href="./pages/promociones.html" class="btn btn-primary colorbtncard">Ahorra con Estacion de milanesas</a>
     </div>
+  </div>
+</section>
+<section class="container-fluid amigoscaja">
+  <div class="contenedoramigos">
+  <img id="imgamigos" class="img-fluid contenedoramigos" src="./assets/images/carousel3.jpg" alt="noche de amigos">
+    <p class="mensajeamigos fuenteamigos">ESTACION DE MILANESAS + AMIGOS = NOCHE PERFECTA &#x2764</p>
+  </div>
+</section>
+<section>
+  <div>
+    <p>FRANQUICIAS</p>
   </div>
 </section>
 </main>
