--- a/index.html
+++ b/index.html
@@ -98,12 +98,54 @@
     <p class="mensajeamigos fuenteamigos">ESTACION DE MILANESAS + AMIGOS = NOCHE PERFECTA &#x2764</p>
   </div>
 </section>
-<section>
+<section class="container-fluid">
   <div>
-    <p>FRANQUICIAS</p>
+    <h2 class="conocenosfont text-center mb-5">FRANQUICIAS</h2>
+  </div>
+  <div class="row">
+    <div class="col-6 row d-flex justify-content-center">
+      <h3 class="col-12 franquiciasfont mt-2">¿Te gusta tanto estacion de milanesas como a nosotros? ¡Te estamos buscando!</h3>
+      <p class="col-12 franquiciasfont">Te ofrecemos asesoramiento para que te unas a uno de los restaurantes lider en el rubro y lleves junto a nosotros la marca a lo mas alto</p>
+      <a id="btnmedidas" href="./pages/franquicias.html" class="btn btn-primary colorbtncard align-self-center mt-3">Ir a franquicias</a>
+    </div>
+    <img class="COL-6 img-fluid" id="franquiciaimg" src="./assets/images/franquiciaiii.jpg" alt="imagen local estacion milanesas">
   </div>
 </section>
 </main>
+<footer class="container-fluid">
+  <nav class="row">
+    <div class="col-3">
+      <h2>Productos</h2>
+      <ul>
+        <li> <a href="">Milanesas</a></li>
+        <li> <a href="">Hamburguesas</a></li>
+        <li> <a href="">Estacion box</a></li>
+        <li> <a href="">Sandwichs</a></li>
+        <li> <a href="">Bebidas</a></li>
+      </ul>
+    </div>
+    <div class="col-3">
+      <h2>Locales</h2>
+      <ul>
+        <li> <a href="">Encontra tu estacion</a></li>
+        <li> <a href="">Franquicias</a></li>
+      </ul>
+    </div>
+    <div class="col-3">
+      <h2>Promociones</h2>
+      <ul>
+        <li><a href="">Descuentos</a></li>
+      </ul>
+    </div>
+    <div class="col-3">
+      <h4>Seguinos</h4>
+      <img src="" alt="">
+      <img src="" alt="">
+
+      <h2>Estacion de milanesas</h2>
+    </div>
+  </nav>
+</footer>
     <script src="./scripts/inicio.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
 </body>
