--- a/index.html
+++ b/index.html
@@ -113,38 +113,37 @@
 </section>
 </main>
 <footer class="container-fluid">
-  <nav class="row">
-    <div class="col-3">
-      <h2>Productos</h2>
+  <div class="row container-fluid">
+    <div class="col-3 mt-3">
+      <h2 class="titulofooter hover-effect">Productos</h2>
       <ul>
-        <li> <a href="">Milanesas</a></li>
-        <li> <a href="">Hamburguesas</a></li>
-        <li> <a href="">Estacion box</a></li>
-        <li> <a href="">Sandwichs</a></li>
-        <li> <a href="">Bebidas</a></li>
+        <li class="menufooter mb-1 opcionesfooter"> <a class="textdecoration" href="">Milanesas</a></li>
+        <li class="menufooter mb-1 opcionesfooter"> <a class="textdecoration" href="">Hamburguesas</a></li>
+        <li class="menufooter mb-1 opcionesfooter"> <a class="textdecoration" href="">Estacion box</a></li>
+        <li class="menufooter mb-1 opcionesfooter"> <a class="textdecoration" href="">Sandwichs</a></li>
+        <li class="menufooter mb-1 opcionesfooter"> <a class="textdecoration" href="">Bebidas</a></li>
       </ul>
     </div>
-    <div class="col-3">
-      <h2>Locales</h2>
+    <div class="col-3 mt-3">
+      <h2 class="titulofooter hover-effect text-center">Locales</h2>
       <ul>
-        <li> <a href="">Encontra tu estacion</a></li>
-        <li> <a href="">Franquicias</a></li>
+        <li class="menufooter mb-1 opcionesfooter"> <a class="textdecoration" href="">Encontra tu estacion</a></li>
+        <li class="menufooter mb-1 opcionesfooter"> <a class="textdecoration" href="">Franquicias</a></li>
       </ul>
     </div>
-    <div class="col-3">
-      <h2>Promociones</h2>
+    <div class="col-3 mt-3">
+      <h2 class="titulofooter hover-effect">Promociones</h2>
       <ul>
-        <li><a href="">Descuentos</a></li>
+        <li class="menufooter opcionesfooter"><a class="textdecoration" href="">Descuentos</a></li>
       </ul>
     </div>
-    <div class="col-3">
-      <h4>Seguinos</h4>
+    <div class="col-3 mt-3">
+      <h4 class="titulofooter hover-effect">Seguinos</h4>
       <img src="" alt="">
       <img src="" alt="">
-
-      <h2>Estacion de milanesas</h2>
+      <h2 class="milafooter hover-effect">Estacion de milanesas</h2>
     </div>
-  </nav>
+  </div>
 </footer>
     <script src="./scripts/inicio.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
