Se terminan los estilos del footer

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.3/css/all.css" integrity="sha384-MzPiBHJ8MqWzT9T7FJiTJL6v1T6ut/HmO+Pomjz+s//BvOgQTJ+1tuXRMjfkzHi2" crossorigin="anonymous">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Lora&family=Roboto:wght@700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./css/style.css">
@@ -117,35 +118,36 @@
     <div class="col-3 mt-3">
       <h2 class="titulofooter hover-effect">Productos</h2>
       <ul>
-        <li class="menufooter mb-1 opcionesfooter"> <a class="textdecoration" href="">Milanesas</a></li>
-        <li class="menufooter mb-1 opcionesfooter"> <a class="textdecoration" href="">Hamburguesas</a></li>
-        <li class="menufooter mb-1 opcionesfooter"> <a class="textdecoration" href="">Estacion box</a></li>
-        <li class="menufooter mb-1 opcionesfooter"> <a class="textdecoration" href="">Sandwichs</a></li>
-        <li class="menufooter mb-1 opcionesfooter"> <a class="textdecoration" href="">Bebidas</a></li>
+        <li class="menufooter mb-1"> <a class="textdecoration opcionesfooter" href="">Milanesas</a></li>
+        <li class="menufooter mb-1"> <a class="textdecoration opcionesfooter" href="">Hamburguesas</a></li>
+        <li class="menufooter mb-1"> <a class="textdecoration opcionesfooter" href="">Estacion box</a></li>
+        <li class="menufooter mb-1"> <a class="textdecoration opcionesfooter" href="">Sandwichs</a></li>
+        <li class="menufooter mb-1"> <a class="textdecoration opcionesfooter" href="">Bebidas</a></li>
       </ul>
     </div>
     <div class="col-3 mt-3">
-      <h2 class="titulofooter hover-effect text-center">Locales</h2>
-      <ul>
-        <li class="menufooter mb-1 opcionesfooter"> <a class="textdecoration" href="">Encontra tu estacion</a></li>
-        <li class="menufooter mb-1 opcionesfooter"> <a class="textdecoration" href="">Franquicias</a></li>
+      <h2 class="titulofooter hover-effect">Locales</h2>
+      <ul class="d-flex container-fluid flex-column">
+        <li class="menufooter mb-1"> <a class="textdecoration opcionesfooter" href="">Encontra tu estacion</a></li>
+        <li class="menufooter mb-1"> <a class="textdecoration opcionesfooter" href="">Franquicias</a></li>
       </ul>
     </div>
     <div class="col-3 mt-3">
       <h2 class="titulofooter hover-effect">Promociones</h2>
       <ul>
-        <li class="menufooter opcionesfooter"><a class="textdecoration" href="">Descuentos</a></li>
+        <li class="menufooter"><a class="textdecoration opcionesfooter" href="">Descuentos</a></li>
       </ul>
     </div>
     <div class="col-3 mt-3">
-      <h4 class="titulofooter hover-effect">Seguinos</h4>
-      <img src="" alt="">
-      <img src="" alt="">
-      <h2 class="milafooter hover-effect">Estacion de milanesas</h2>
+      <h4 class="titulofooter hover-effect mb-3">Seguinos</h4>
+      <i class="fa-brands fa-instagram mx-2" style="color: #ffffff;"></i>
+      <i class="fa-brands fa-facebook mx-2" style="color: #ffffff;"></i>
+      <img id="logofooter" src="./assets/images/86948.jpg" alt="logo estacion de milanesas footer">
     </div>
   </div>
 </footer>
     <script src="./scripts/inicio.js"></script>
+    <script src="https://kit.fontawesome.com/9d9e250ac5.js" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
 </body>
 </html>
