--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
     <h2 class="conocenosfont text-center mb-5">FRANQUICIAS</h2>
   </div>
   <div class="row">
-    <div class="col-6 row d-flex justify-content-center">
+    <div class="col-12 col-sm-6 row d-flex justify-content-center">
       <h3 class="col-12 franquiciasfont mt-2">¿Te gusta tanto estacion de milanesas como a nosotros? ¡Te estamos buscando!</h3>
       <p class="col-12 franquiciasfont">Te ofrecemos asesoramiento para que te unas a uno de los restaurantes lider en el rubro y lleves junto a nosotros la marca a lo mas alto</p>
       <a id="btnmedidas" href="./pages/franquicias.html" class="btn btn-primary colorbtncard align-self-center mt-3">Ir a franquicias</a>
