--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
     <title>Estacion de milanesas</title>
 </head>
-<body>
+<body class="container-fluid">
     <header class="container-fluid">
     <nav id="estilonav" class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid">
@@ -68,7 +68,7 @@
     </div>
   </section>
 <section class="container-fluid row">
-  <div class="card col-4 container" style="width: 27rem;">
+  <div class="card container col-xs-12 col-sm-12 col-md-12 col-lg-4 col-xl-4 col-xxl-4" style="width: 27rem;">
     <img src="./assets/images/productos.jpg" class="card-img-top" alt="imagen productos">
     <div class="card-body row">
       <h5 class="card-title descubrifont text-center">PRODUCTOS</h5>
@@ -76,7 +76,7 @@
       <a href="./pages/productos.html" class="btn btn-primary colorbtncard">Conocelos</a>
     </div>
   </div>
-  <div class="card col-4 container" style="width: 27rem;">
+  <div class="card container col-xs-12 col-sm-12 col-md-12 col-lg-4 col-xl-4 col-xxl-4" style="width: 27rem;">
     <img src="./assets/images/locales.jpg" class="card-img-top" alt="imagen locales">
     <div class="card-body row container-fluid">
       <h5 class="card-title descubrifont text-center">LOCALES</h5>
@@ -84,7 +84,7 @@
       <a href="./pages/locales.html" class="btn btn-primary colorbtncard">Sucursales</a>
     </div>
   </div>
-  <div class="card col-4 container" style="width: 27rem;">
+  <div class="card container col-xs-12 col-sm-12 col-md-12 col-lg-4 col-xl-4 col-xxl-4" style="width: 27rem;">
     <img src="./assets/images/promociones.jpg" class="card-img-top" alt="imagen promociones">
     <div class="card-body row">
       <h5 class="card-title descubrifont text-center">PROMOCIONES</h5>
@@ -103,13 +103,15 @@
   <div>
     <h2 class="conocenosfont text-center mb-5">FRANQUICIAS</h2>
   </div>
-  <div class="row">
-    <div class="col-12 col-sm-6 row d-flex justify-content-center">
-      <h3 class="col-12 franquiciasfont mt-2">¿Te gusta tanto estacion de milanesas como a nosotros? ¡Te estamos buscando!</h3>
-      <p class="col-12 franquiciasfont">Te ofrecemos asesoramiento para que te unas a uno de los restaurantes lider en el rubro y lleves junto a nosotros la marca a lo mas alto</p>
-      <a id="btnmedidas" href="./pages/franquicias.html" class="btn btn-primary colorbtncard align-self-center mt-3">Ir a franquicias</a>
+  <div class="row container-fluid">
+    <div class="col-xs-12 col-sm-12 col-md-12 col-lg-5 col-xl-5 col-xxl-5 row d-flex justify-content-center">
+      <h3 class="franquiciasfont mt-2 text-center left">¿Te gusta tanto estacion de milanesas como a nosotros? ¡Te estamos buscando!</h3>
+      <p class=" franquiciasfont mt-2 text-center left">Te ofrecemos asesoramiento para que te unas a uno de los restaurantes lider en el rubro y lleves junto a nosotros la marca a lo mas alto</p>
+      <a id="btnmedidas" href="./pages/franquicias.html" class="btn btn-primary colorbtncard">Ir a franquicias</a>
     </div>
-    <img class="COL-6 img-fluid" id="franquiciaimg" src="./assets/images/franquiciaiii.jpg" alt="imagen local estacion milanesas">
+    <div class="col-xs-12 col-sm-12 col-md-12 col-lg-7 col-xl-7 col-xxl-7 container-fluid">
+    <img class="img-fluid" id="franquiciaimg" src="./assets/images/franquiciaiii.jpg" alt="imagen local estacion milanesas">
+  </div>
   </div>
 </section>
 </main>
