responsive error fixed

--- a/index.html
+++ b/index.html
@@ -58,16 +58,16 @@
       </nav>
 </header>
 <main class="container-fluid">
-  <section class="contenedor">
+  <section class="contenedor section1">
     <img class="img-main img-fluid" src="./assets/images/1.jpg" alt="imagen milanesa">
     <p class="mensajemila fuentemila">WE LOVE MILA &#x2764</p>
   </section>
-  <section class="container-fluid">
+  <section class="container-fluid section2">
     <div class="text-center mt-5 mb-5">
       <p class="conocenosfont">DESCUBRI</p>
     </div>
   </section>
-<section class="container-fluid row">
+<section class="container-fluid row section3">
   <div class="card container col-xs-12 col-sm-12 col-md-12 col-lg-4 col-xl-4 col-xxl-4" style="width: 27rem;">
     <img src="./assets/images/productos.jpg" class="card-img-top" alt="imagen productos">
     <div class="card-body row">
@@ -93,13 +93,13 @@
     </div>
   </div>
 </section>
-<section class="container-fluid amigoscaja">
+<section class="container-fluid amigoscaja section4">
   <div class="contenedoramigos">
   <img id="imgamigos" class="img-fluid contenedoramigos" src="./assets/images/carousel3.jpg" alt="noche de amigos">
     <p class="mensajeamigos fuenteamigos">ESTACION DE MILANESAS + AMIGOS = NOCHE PERFECTA &#x2764</p>
   </div>
 </section>
-<section class="container-fluid">
+<section class="container-fluid section5">
   <div>
     <h2 class="conocenosfont text-center mb-5">FRANQUICIAS</h2>
   </div>
