Se añade footer exclusivo celulares

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.3/css/all.css" integrity="sha384-MzPiBHJ8MqWzT9T7FJiTJL6v1T6ut/HmO+Pomjz+s//BvOgQTJ+1tuXRMjfkzHi2" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous"/>
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Lora&family=Roboto:wght@700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./css/style.css">
@@ -116,6 +116,7 @@
 </section>
 </main>
 <footer class="container-fluid">
+  <div class="footerpc">
   <div class="row container-fluid">
     <div class="col-3 mt-3">
       <h2 class="titulofooter hover-effect">Productos</h2>
@@ -141,10 +142,63 @@
       </ul>
     </div>
     <div class="col-3 mt-3">
-      <h4 class="titulofooter hover-effect mb-3">Seguinos</h4>
-      <i class="fa-brands fa-instagram mx-2" style="color: #ffffff;"></i>
-      <i class="fa-brands fa-facebook mx-2" style="color: #ffffff;"></i>
+      <h4 class="titulofooter hover-effect mb-3">Nuestras redes</h4>
+      <a href="https://www.instagram.com/estacion_de_milanesas/" target="_blank"><i class="fa-brands fa-instagram mx-2" style="color: #ffffff;"></i></i></a></i>
+      <a href="https://www.facebook.com/EstacionDeMilanesas" target="_blank"><i class="fa-brands fa-facebook mx-2" style="color: #ffffff;"></i></a></i>
       <img id="logofooter" src="./assets/images/86948.jpg" alt="logo estacion de milanesas footer">
+    </div>
+  </div>
+</div>
+  <div class="container-fluid footercelu">
+    <div class="accordion accordion-flush" id="accordionFlushExample">
+      <div class="accordion-item">
+        <h2 class="accordion-header">
+          <button class="accordion-button collapsed titulofooter hover-effect" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
+            PRODUCTOS
+          </button>
+        </h2>
+        <div id="flush-collapseOne" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
+          <div class="accordion-body"><a class="textdecoration opcionesfooter" href="./pages/productos.html">Milanesas</a></div>
+          <div class="accordion-body"><a class="textdecoration opcionesfooter" href="./pages/productos.html">Hamburguesas</a></div>
+          <div class="accordion-body"><a class="textdecoration opcionesfooter" href="./pages/productos.html">Estacion box</a></div>
+          <div class="accordion-body"><a class="textdecoration opcionesfooter" href="./pages/productos.html">Sandwichs</a></div>
+          <div class="accordion-body"><a class="textdecoration opcionesfooter" href="./pages/productos.html">Bebidas</a></div>
+        </div>
+      </div>
+      <div class="accordion-item">
+        <h2 class="accordion-header">
+          <button class="accordion-button collapsed titulofooter hover-effect" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo">
+            LOCALES
+          </button>
+        </h2>
+        <div id="flush-collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
+          <div class="accordion-body"><a class="textdecoration opcionesfooter" href="./pages/locales.html">Encontra tu estacion</a></div>
+          <div class="accordion-body"><a class="textdecoration opcionesfooter" href="./pages/franquicias.html">Franquicias</a></div>
+        </div>
+      </div>
+      <div class="accordion-item">
+        <h2 class="accordion-header">
+          <button class="accordion-button collapsed titulofooter hover-effect" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseThree" aria-expanded="false" aria-controls="flush-collapseThree">
+            PROMOCIONES
+          </button>
+        </h2>
+        <div id="flush-collapseThree" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
+          <div class="accordion-body"><a class="textdecoration opcionesfooter" href="./pages/promociones.html">Descuentos</a></div>
+        </div>
+      </div>
+      <div class="accordion-item">
+        <h2 class="accordion-header">
+          <button class="accordion-button collapsed titulofooter hover-effect" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseThree" aria-expanded="false" aria-controls="flush-collapseThree">
+            NUESTRAS REDES
+          </button>
+        </h2>
+        <div id="flush-collapseThree" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
+          <div class="accordion-body">
+            <a href="https://www.instagram.com/estacion_de_milanesas/" target="_blank"><i class="fa-brands fa-instagram mx-2" style="color: #ffffff;"></i></i></a></i>
+            <a href="https://www.facebook.com/EstacionDeMilanesas" target="_blank"><i class="fa-brands fa-facebook mx-2" style="color: #ffffff;"></i></a></i>
+          </div>
+        </div>
+      </div>
     </div>
   </div>
 </footer>
